--- a/content/publication/2101-03525/cite.bib
+++ b/content/publication/2101-03525/cite.bib
@@ -1,7 +1,9 @@
-@misc{2101.03525,
- author = {Jui-Te Huang and Chen-Lung Lu and Po-Kai Chang and Ching-I Huang and Chao-Chun Hsu and Zu Lin Ewe and Po-Jui Huang and Hsueh-Cheng Wang},
- eprint = {arXiv:2101.03525},
- title = {Cross-Modal Contrastive Learning of Representations for Navigation using Lightweight, Low-Cost Millimeter Wave Radar for Adverse Environmental Conditions},
- year = {2021}
-}
-
+@ARTICLE{9362209,
+  author={Huang, Jui-Te and Lu, Chen-Lung and Chang, Po-Kai and Huang, Ching-I and Hsu, Chao-Chun and Ewe, Zu Lin and Huang, Po-Jui and Wang, Hsueh-Cheng},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Cross-Modal Contrastive Learning of Representations for Navigation Using Lightweight, Low-Cost Millimeter Wave Radar for Adverse Environmental Conditions}, 
+  year={2021},
+  volume={6},
+  number={2},
+  pages={3333-3340},
+  doi={10.1109/LRA.2021.3062011}}
